# COEN366_SERVER

./: CMakeLists.txt  main.cpp
header/: Globals.h  HMAC.h  Header.h  Server.h  Types.h  UDP.h
source/: HMAC.cpp  Header.cpp  Server.cpp  UDP.cpp
